# Shape_shooter

./: CMakeLists.txt  README.md  classes.h  config.txt  main.cpp  run.sh
include/: classes.h
resources/: config.txt
src/: classes.h  main.cpp
